--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,15 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.env*
+
+# ASDF local config
+.tool-versions
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE
+.idea/
+.vscode/
