--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.11",
     "fast-xml-parser": "^4.1.3",
     "lodash": "^4.17.21",
+    "loglevel": "^1.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
