--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
   "name": "beautify-tax-forms-app",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
-    "@material-tailwind/react": "^1.4.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.14",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "fast-xml-parser": "^4.1.3",
+    "@material-tailwind/react": "^2.1.9",
+    "fast-xml-parser": "^4.3.6",
     "lodash": "^4.17.21",
-    "loglevel": "^1.8.1",
+    "loglevel": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "NODE_ENV=development vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "test": "jest"
   },
+  "testEnvironment": "jsdom",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -47,7 +39,32 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191",
-    "tailwindcss": "^3.2.7"
+    "@babel/plugin-transform-react-jsx": "^7.16.7",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.16.0",
+    "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.25",
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-jest": "^28.2.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
+    "jsdom": "^24.0.0",
+    "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.9",
+    "vite-bundle-visualizer": "^1.1.0",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
